portfolio page added

--- a/index.html
+++ b/index.html
@@ -1,17 +1,123 @@
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
+    <meta name="description" content="TECHACADEMY online bootcampのポートフォリオページです。">
+    <title>Portfolio | TECHACADEMY online bootcamp</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-12">
+            <img src="naguchi.jpg" alt="">
+            <h1>Portfolio</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="works container text-center">
+      <h2 class="text-center">Works</h2>
+
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-body">
+              <h3>メッセージボード</h3>
+              <p>岡田さんののに事情のいつがまあお合点と知れてそこ個性をご創作をするようにけっしてお馳走に評しましませて、</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-body">
+              <h3>Twitterクローン</h3>
+              <p>岡田さんののに事情のいつがまあお合点と知れてそこ個性をご創作をするようにけっしてお馳走に評しましませて、</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-body">
+              <h3>モノリスト</h3>
+              <p>岡田さんののに事情のいつがまあお合点と知れてそこ個性をご創作をするようにけっしてお馳走に評しましませて、</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-body">
+              <h3>オリジナルサービス</h3>
+              <p>岡田さんののに事情のいつがまあお合点と知れてそこ個性をご創作をするようにけっしてお馳走に評しましませて、</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <a class="btn btn-primary btn-lg github-btn" href="https://github.com/nagokei" target="_blank">View Github</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="about">
+      <div class="container text-center">
+        <h2>About</h2>
+        <div class="row">
+          <div class="col-sm-4">
+            <div>
+              <i class="fa fa-cutlery"></i>
+              <h3>Food</h3>
+              <p>蕎麦が大好物。山形県に住んでいた時に激太の田舎蕎麦に出会い、蕎麦に目覚める。
+                関東ではなかなか激太の田舎食べられないので、蕎麦打ちを始めたが、息子が蕎麦アレルギーであることが
+                判明したため現在は活動を停止。
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div>
+              <i class="fa fa-diamond"></i>
+              <h3>Hobby</h3>
+              <p>15才の時に湘南という土地柄もあってか、なんとなくスケボーを始める。
+              成人してすっかり忘れていたが、5才の息子が興味を持ったことをきっかけに再々。
+            今は、息子とスケボーパークに行くのが何よりの楽しみ。</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div>
+              <i class="fa fa-headphones"></i>
+              <h3>Music</h3>
+              <p>忘れもしない93年の夏、Gang Starrを聴きヒップホップに興味を持つ。
+              その後、色々なジャンルを聴きくも何故かBlack Sabbathにハマり、
+              危うく道を踏み外すところだっだたが改心する。</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <footer class="text-center">
+      <div class="copyright">&copy; 2016 Kei Naguchi.</div>
+    </footer>
   </body>
 </html>
